<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HBM Scan</string>
    <string name="router">router</string>
    <string name="pref_debug">Debug</string>
    <string name="use_fake_messages">Use fake messages</string>
    <string name="use_fake_messages_summ">Don\'t receive multicast messages, emit dummy messages instead</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">Settings</string>
    <string name="popup_show_settings">show settings</string>
    <string name="popup_configure">configure</string>
    <string name="netSettings_caption">Network settings:</string>
    <string name="interfaces_caption">Interfaces:</string>
    <string name="DefaultGateway">Default Gateway:</string>
    <string name="services_label">Services:</string>
    <string name="configure_label">Configure:</string>
    <string name="configure_interface_name_label">Interface name:</string>
    <string name="configure_method_label">Configuration method:</string>
    <string name="configure_method_dhcp_label">Dhcp</string>
    <string name="configure_method_manual">Manual</string>
    <string name="configure_ip_address_label">IP-address:</string>
    <string name="configure_subnet_label">Subnetmask:</string>
    <string name="configure_gateway_label">Default gateway:</string>
    <string name="configure_gateway_ip_label">IP-address</string>
    <string name="configure_ready_button">Send configuration</string>
    <string name="popup_open_browser">Open Browser</string>
    <string name="menu_filters">Filters&#8230;</string>
    <string name="filters_label">Capture filters:</string>
    <string name="add_filter_label">Add filter:</string>
    <string name="filter_add_family_type_btn">Familiy type</string>
    <string name="filter_add_uuid_btn">UUID</string>
    <string name="filter_string_label">Filter String:</string>
    <string name="filter_item_filter_string">Filter string</string>
    <string name="filter_item_filter_type">Filter type</string>
    <string name="interface_item_interface_name">Interface name</string>
    <string name="interface_item_config_method">Configuration method</string>
    <string name="ip_item_ip_address">IP address</string>
    <string name="menu_search_tiel">Search</string>
    <string name="routed_device_default_Text">Router placeholder</string>
    <string name="settings_display_device_name">Device name</string>
    <string name="settings_display_device_label">Label</string>
    <string name="settings_display_device_uuid">UUID</string>
    <string name="settings_display_device_familiy_type">Family type</string>
    <string name="settings_display_device_type">Type</string>
    <string name="settings_display_device_firmware">Firmware version</string>
    <string name="settings_display_gateway_ipv4">Gateway IPv4</string>
    <string name="settings_display_gateway_ipv6">Gateway IPv6</string>
    <string name="settings_display_device_router">Router</string>
    <string name="menu_pause_option">Pause/Resume</string>
    <string name="scan_activity_titel_label"></string>

</resources>