<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom"
        android:title="@string/menu_search_tiel"/>
    <item
        android:id="@+id/action_pause_control"
        android:icon="@drawable/ic_action_pause"
        android:showAsAction="always"
        android:title="@string/menu_pause_option">
    </item>
    <item
        android:id="@+id/action_filters"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="ifRoom"
        android:title="@string/menu_filters">
    </item>

</menu>