<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/filters_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/filters_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/filters_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/filters_label"
            android:layout_marginLeft="15dp" >
        </ListView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/add_filter_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/add_filter_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/filter_add_family_type_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/add_filter_label"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/filter_add_family_type_btn" />

        <Button
            android:id="@+id/filter_add_uuid_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/filter_add_family_type_btn"
            android:layout_below="@+id/filter_add_family_type_btn"
            android:text="@string/filter_add_uuid_btn" />

        <TextView
            android:id="@+id/filter_string_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/filter_add_uuid_btn"
            android:layout_below="@+id/filter_add_uuid_btn"
            android:layout_marginTop="40dp"
            android:text="@string/filter_string_label" />

        <EditText
            android:id="@+id/filter_string_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/filter_string_label"
            android:layout_below="@+id/filter_string_label"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </RelativeLayout>

</LinearLayout>