<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/DeviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="Device Name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/DeviceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/DeviceName"
            android:text="label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/DeviceUUID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/DeviceLabel"
            android:layout_marginTop="15dp"
            android:text="UUID" />

        <TextView
            android:id="@+id/DeviceRouter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/DeviceFirmware"
            android:layout_marginTop="15dp"
            android:text="Router" />

        <TextView
            android:id="@+id/DeviceFamilyType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/DeviceUUID"
            android:layout_marginTop="15dp"
            android:text="FamilyType" />

        <TextView
            android:id="@+id/DeviceType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/DeviceFamilyType"
            android:text="type" />

        <TextView
            android:id="@+id/DeviceFirmware"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/DeviceType"
            android:layout_marginTop="15dp"
            android:text="FirmwareVers"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/netSettingsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/DeviceRouter"
            android:layout_marginTop="43dp"
            android:text="@string/netSettings_caption"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/interfacesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/netSettingsLabel"
            android:layout_marginTop="24dp"
            android:text="@string/interfaces_caption" />

        <ListView
            android:id="@+id/interfacesListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/interfacesLabel" >
        </ListView>

        <TextView
            android:id="@+id/default_gateway_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/interfacesListView"
            android:layout_marginTop="24dp"
            android:text="@string/DefaultGateway" />

        <TextView
            android:id="@+id/gateway_ipv4_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/default_gateway_label"
            android:layout_marginLeft="10dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/gateway_ipv6_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/gateway_ipv4_view"
            android:layout_marginLeft="10dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/services_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/gateway_ipv6_view"
            android:layout_marginTop="15dp"
            android:text="@string/services_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/services_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/services_label" >
        </ListView>
    </RelativeLayout>

</ScrollView>